--- a/Configs/git_macos/.gitconfig
+++ b/Configs/git_macos/.gitconfig
@@ -13,3 +13,9 @@
 	gpgSign = true
 [pull]
 	rebase = false
+[gui]
+	pruneduringfetch = true
+[smartgit "submodule"]
+	fetchalways = false
+	update = true
+	initializenew = true
